tests/rosetta/out/Fortran/averages-median-3.error
gfortran: exit status 1
/tmp/averages-median-3.f90:27:7:

   27 |       pv = arr(((px)+1))
      |       1
Error: Unclassifiable statement at (1)
/tmp/averages-median-3.f90:64:22:

   64 |     half = int(((size(arr) / 2)))
      |                      1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/averages-median-3.f90:26:15:

   26 |       px = mod(now(),size(arr))
      |               1
Error: Function ‘now’ at (1) has no IMPLICIT type
/tmp/averages-median-3.f90:28:19:

   28 |       last = (size(arr) - 1)
      |                   1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/averages-median-3.f90:55:8:

   55 |         k = (k - ((px + 1)))
      |        1
Error: Dummy argument ‘k’ with INTENT(IN) in variable definition context (assignment) at (1)
/tmp/averages-median-3.f90:25:20:

   25 |     do while ((size(arr) > 1))
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/averages-median-3.f90:66:18:

   66 |     if ((mod(size(arr),2) == 0)) then
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/averages-median-3.f90:16:26:

   16 |   write(s0,'(G0)') median((/3,1,4,1/))
      |                          1
Error: Rank mismatch in argument ‘list’ at (1) (scalar and rank-1)
/tmp/averages-median-3.f90:18:26:

   18 |   write(s1,'(G0)') median((/3,1,4,1,5/))
      |                          1
Error: Rank mismatch in argument ‘list’ at (1) (scalar and rank-1)
