tests/rosetta/out/Fortran/averages-median-3.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program averages_median_3
  implicit none
  character(len=100) :: s0
  character(len=100) :: s1
    integer :: arr
      integer :: px
      integer :: pv
      integer :: last
      integer :: tmp
      integer :: i
        integer :: v
          integer :: tmp2
    integer :: half
    integer :: med
  write(s0,'(G0)') median((/3,1,4,1/))
  print *, s0
  write(s1,'(G0)') median((/3,1,4,1,5/))
  print *, s1
  contains
  recursive real function qsel(a,k) result(res)
    integer, intent(in) :: a
    integer, intent(in) :: k
    arr = a
    do while ((size(arr) > 1))
      px = mod(now(),size(arr))
      pv = arr(((px)+1))
      last = (size(arr) - 1)
      tmp = arr(((px)+1))
      arr(((px)+1)) = arr(((last)+1))
      arr(((last)+1)) = tmp
      px = 0
      i = 0
      do while ((i < last))
        v = arr(((i)+1))
        if ((v < pv)) then
          tmp2 = arr(((px)+1))
          arr(((px)+1)) = arr(((i)+1))
          arr(((i)+1)) = tmp2
          px = (px + 1)
        end if
        i = (i + 1)
      end do
      if ((px == k)) then
        res = pv
        return
      end if
      if ((k < px)) then
        arr = arr(1:px)
      else
        tmp2 = arr(((px)+1))
        arr(((px)+1)) = pv
        arr(((last)+1)) = tmp2
        arr = arr((((px + 1)))+1:size(arr))
        k = (k - ((px + 1)))
      end if
    end do
    res = arr(((0)+1))
    return
  end function qsel
  recursive real function median(list) result(res)
    integer, intent(in) :: list
    arr = list
    half = int(((size(arr) / 2)))
    med = qsel(arr,half)
    if ((mod(size(arr),2) == 0)) then
      res = (((med + qsel(arr,(half - 1)))) / 2)
      return
    end if
    res = med
    return
  end function median
end program averages_median_3
